# LLaVA-MORE

./: .gitignore  pixi.toml  pyproject.toml
scripts/llava-more/eval/: lmms_eval_multiple_task.sh  lmms_eval_multiple_task_slurm.sh
src/llava/model/: builder.py
src/llava/model/multimodal_encoder/: aloe_encoder.py  builder.py
src/lmms_eval/: __main__.py  evaluator.py
src/lmms_eval/models/: llava.py
src/lmms_eval/tasks/mmmu/: utils.py
